--- a/e-cigarette_PWM70 _参考电压为VDD参数(参考D46)/e-cigarette_BXW/e-cigarette_BXW.htm
+++ b/e-cigarette_PWM70 _参考电压为VDD参数(参考D46)/e-cigarette_BXW/e-cigarette_BXW.htm
@@ -115,25 +115,25 @@ div.ir-protocol-table td.modified { font-weight:bold; text-decoration:underline;
         </td>
         <td class="TableCell1">
           <span class="TextCellLabel">(6). File Checksum:</span>
-          <span class="TextCellItem">08D7F9</span>
+          <span class="TextCellItem">08E60B</span>
         </td>
       </tr>
       <tr>
         <td class="padding"> </td>
         <td class="TableCell1">
           <span class="TextCellLabel">(7). ROM Usage:</span>
-          <span class="TextCellItem">1,649 / 2,048 words</span>
+          <span class="TextCellItem">1,055 / 2,048 words</span>
         </td>
         <td class="TableCell1">
           <span class="TextCellLabel">(8). Code Checksum:</span>
-          <span class="TextCellItem">A8097D</span>
+          <span class="TextCellItem">53B33C</span>
         </td>
       </tr>
       <tr>
         <td class="padding"> </td>
         <td class="TableCell1">
           <span class="TextCellLabel">(9). Date:</span>
-          <span class="TextCellItem">2024/05/22</span>
+          <span class="TextCellItem">2024/05/23</span>
         </td>
         <td class="TableCell1">
           <span class="TextCellLabel"></span>
